--- a/src/parts/addPartForm.fxml
+++ b/src/parts/addPartForm.fxml
@@ -98,7 +98,7 @@
             <TextField fx:id="partName" alignment="CENTER" />
             <TextField fx:id="inventoryLevel" alignment="CENTER" />
             <TextField fx:id="costPerUnit" alignment="CENTER" />
-            <TextField alignment="CENTER" />
+            <TextField fx:id="partMax" alignment="CENTER" />
             <StackPane alignment="TOP_CENTER" prefHeight="150.0" prefWidth="200.0">
                <children>
                   <TextField fx:id="companyNameTextField" promptText="Company Name" />
@@ -114,7 +114,7 @@
                   <Font size="18.0" />
                </font>
             </Label>
-            <TextField layoutX="66.0" layoutY="290.0" prefHeight="27.0" prefWidth="208.0" />
+            <TextField fx:id="partMin" layoutX="66.0" layoutY="290.0" prefHeight="27.0" prefWidth="208.0" />
          </children>
       </Pane>
       <Pane prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="2" GridPane.rowIndex="2">
@@ -122,7 +122,7 @@
             <ButtonBar layoutX="21.0" layoutY="2.0" prefHeight="40.0" prefWidth="157.0">
               <buttons>
                 <Button fx:id="addPartFormSaveButton" mnemonicParsing="false" onAction="#handleSubmitAddPartForm" text="Save" />
-                  <Button mnemonicParsing="false" text="Cancel" />
+                  <Button fx:id="addPartFormCancelButton" mnemonicParsing="false" onAction="#handleCancelAddPartForm" text="Cancel" />
               </buttons>
             </ButtonBar>
          </children>
