--- a/src/main/mainForm.fxml
+++ b/src/main/mainForm.fxml
@@ -44,8 +44,8 @@
               <columns>
                 <TableColumn fx:id="partId" prefWidth="75.0" text="Part ID" />
                 <TableColumn fx:id="partName" prefWidth="75.0" text="Part Name" />
-                  <TableColumn fx:id="inventoryLevel" prefWidth="118.0" text="Inventory Level" />
-                  <TableColumn fx:id="costPerUnit" prefWidth="118.0" text="Price/Cost per Unit" />
+                  <TableColumn fx:id="partStock" prefWidth="126.0" text="Inventory Level" />
+                  <TableColumn fx:id="partPrice" prefWidth="149.0" text="Price/Cost per Unit" />
               </columns>
             </TableView>
             <TextField fx:id="searchPartField" layoutX="316.0" layoutY="14.0" prefHeight="27.0" prefWidth="281.0" promptText="Search by Part ID" />
@@ -77,10 +77,12 @@
                   <Font size="19.0" />
                </font>
             </Label>
-            <TableView layoutX="17.0" layoutY="48.0" maxHeight="500.0" prefHeight="270.0" prefWidth="618.0" style="-fx-border-color: grey; -fx-border-width: 1; -fx-border-radius: 5;">
+            <TableView fx:id="productsTable" layoutX="17.0" layoutY="48.0" maxHeight="500.0" prefHeight="270.0" prefWidth="618.0" style="-fx-border-color: grey; -fx-border-width: 1; -fx-border-radius: 5;">
                <columns>
-                  <TableColumn prefWidth="75.0" text="C1" />
-                  <TableColumn prefWidth="75.0" text="C2" />
+                  <TableColumn fx:id="productId" prefWidth="75.0" text="Product ID" />
+                  <TableColumn fx:id="productName" prefWidth="122.0" text="Product Name" />
+                  <TableColumn fx:id="productStock" prefWidth="120.0" text="Inventory Level" />
+                  <TableColumn fx:id="productPrice" prefWidth="149.0" text="Price/Cost per Unit" />
                </columns>
             </TableView>
             <TextField layoutX="316.0" layoutY="14.0" prefHeight="27.0" prefWidth="281.0" promptText="Search by Part ID" />
