--- a/src/products/addProductForm.fxml
+++ b/src/products/addProductForm.fxml
@@ -1,18 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.text.Font?>
-
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="700.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="products.ProductsController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="340.5563659667969" minWidth="10.0" prefWidth="146.91726684570312" />
@@ -90,7 +81,7 @@
       </VBox>
       <VBox alignment="TOP_RIGHT" prefHeight="200.0" prefWidth="100.0" spacing="20.0" GridPane.columnIndex="2" GridPane.rowSpan="3">
          <children>
-            <TextField maxWidth="300.0" prefHeight="27.0" prefWidth="435.0" promptText="Search By Part ID or Name">
+            <TextField fx:id="searchField" maxWidth="300.0" prefHeight="27.0" prefWidth="435.0" promptText="Search By Part ID or Name">
                <VBox.margin>
                   <Insets />
                </VBox.margin>
