--- a/src/main/mainForm.fxml
+++ b/src/main/mainForm.fxml
@@ -1,10 +1,19 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
 <?import javafx.scene.Cursor?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
+
 <GridPane alignment="CENTER" prefHeight="500.0" prefWidth="1400.0" style="-fx-border-width: 2; -fx-border-color: black;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="main.Controller">
   <columnConstraints>
       <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -81,7 +90,7 @@
                <buttons>
                   <Button fx:id="addProductButton" mnemonicParsing="false" onAction="#handleAddProductButton" text="Add" />
                   <Button fx:id="modifyProductButton" mnemonicParsing="false" onAction="#handleModifyProductButton" text="Modify" />
-                  <Button mnemonicParsing="false" text="Delete" />
+                  <Button fx:id="deleteProductButton" mnemonicParsing="false" onAction="#handleDeleteProductButton" text="Delete" />
                </buttons>
             </ButtonBar>
          </children>
