--- a/src/main/mainForm.fxml
+++ b/src/main/mainForm.fxml
@@ -4,6 +4,7 @@
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Hyperlink?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -103,5 +104,6 @@
             <Button fx:id="exitButton" layoutX="501.0" layoutY="-1.0" mnemonicParsing="false" onAction="#handleExitButton" prefHeight="30.0" prefWidth="79.0" text="Exit" />
          </children>
       </Pane>
+      <Hyperlink fx:id="documentationLink" onAction="#handleClickDocumentationLink" text="View Documentation" textAlignment="CENTER" textFill="#0e1ce1" GridPane.columnIndex="5" />
    </children>
 </GridPane>
