--- a/src/parts/addPartForm.fxml
+++ b/src/parts/addPartForm.fxml
@@ -1,9 +1,21 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ButtonBar?>
+<?import javafx.scene.control.Label?>
+<?import javafx.scene.control.RadioButton?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
+
 <GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="900.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="parts.PartsController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="275.72877502441406" minWidth="10.0" prefWidth="261.5517578125" />
@@ -82,7 +94,7 @@
       </HBox>
       <VBox alignment="TOP_CENTER" prefHeight="345.0" prefWidth="173.0" spacing="46.0" GridPane.columnIndex="1" GridPane.rowIndex="1">
          <children>
-            <TextField fx:id="partIdField" alignment="CENTER" editable="false" />
+            <TextField fx:id="partIdField" alignment="CENTER" disable="true" editable="false" />
             <TextField fx:id="partNameField" alignment="CENTER" />
             <TextField fx:id="partStockField" alignment="CENTER" />
             <TextField fx:id="partPriceField" alignment="CENTER" />
